# zfdms

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  justfile  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test.yml
docs/: index.md  installation.md  usage.md
src/zimra_zfdms/: __init__.py  cli.py
tests/: __init__.py  test_client.py  test_models.py  test_zimra_zfdms.py
zfdms/: certificates.py  challenge.py  client.py  exceptions.py  fiscal_day.py  get_config.py  receipts.py  submit_file.py  utils.py
zfdms/models/: fiscal_day.py  get_config.py  get_status.py  receipts.py  register_device.py  server_certs.py  submit_file.py
