[project]
name = "zfdms"
version = "0.1.0"
description = "Python API Client for ZIMRA's FDMS API Gateways for vat fiscialisation."
readme = "README.md"
authors = [
  {name = "Ronald Maravanyika", email = "rmaravanyika@gmail.com"}
]
maintainers = [
  {name = "Ronald Maravanyika", email = "rmaravanyika@gmail.com"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "typer",
  "rich",
  "dacite",
  "pytest>=9.0.3",
  "requests>=2.33.1",
  "pytest-cov>=7.1.0",
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
    "requests>=2.33.1",
]

[project.urls]
bugs = "https://github.com/ronnzw/zimra_zfdms/issues"
changelog = "https://github.com/ronnzw/zimra_zfdms/blob/main/changelog.md"
homepage = "https://github.com/ronnzw/zimra_zfdms"

[project.scripts]
zimra_zfdms = "zimra_zfdms.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
